--- a/src/style_restaurant.css
+++ b/src/style_restaurant.css
@@ -1,38 +1,135 @@
 /* Reset CSS section*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
 
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+
+}
+
+html,
+body {
+    overflow-x: hidden;
 }
 
 body {
+    position: relative;
     font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    padding: 0 1.5rem 0 1.5rem;
 }
 
 h2 {
     font-size: 1.2rem;
     font-weight: 600;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 12px;
+    padding: 2px 0 2px 0;
+    background-color: #4b4b4b;
+    color: #ffffff;
 }
 
 #nav_bar {
@@ -42,11 +139,8 @@ h2 {
     margin-bottom: 2rem;
 }
 
-#nav_bar > ul {
-    display: flex;
-    gap: 1rem;
-    padding-top: 0.5rem;
-    list-style-type: none;
+.menu_items {
+    display: none;
 }
 
 .nav_logo {
@@ -82,16 +176,39 @@ h2 {
 
 .food_items_grid {
     display: grid;
-    grid-template-columns: 300px 300px 300px;
     align-items: end;
-    gap: 3rem;
+    gap: 1rem;
 }
 
 .food_item {
     padding: 15px;
 }
 
-.food_item > hr {
+.food_item>hr {
     border-top: 1px solid #A3A3A3;
-    width:300px;
+    width: 300px;
+}
+
+@media (min-width: 600px) {
+    .food_items_grid {
+        grid-template-columns: repeat(2, 300px);
+        gap: 3rem;
+    }
+}
+
+@media (min-width: 900px) {
+
+    .menu_items {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1rem;
+        padding-top: 0.5rem;
+        list-style-type: none;
+    }
+
+    .food_items_grid {
+        grid-template-columns: repeat(3, 300px);
+        gap: 3rem;
+    }
 }
