--- a/src/style_restaurant.css
+++ b/src/style_restaurant.css
@@ -1,85 +1,17 @@
 /* Reset CSS section*/
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -89,17 +21,8 @@ video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
     display: block;
 
 }
@@ -113,6 +36,12 @@ body {
     position: relative;
     font-family: "Montserrat", Arial, Helvetica, sans-serif;
     padding: 0 1.5rem 0 1.5rem;
+}
+
+h1 {
+    color: #ED3237;
+    font-size: 1.4rem;
+    font-weight: 600;
 }
 
 h2 {
@@ -141,8 +70,19 @@ footer {
 
 .menu_items {
     display: none;
+    list-style-type: none;
+    width: 100%;
 }
 
+.mobile_hamburger_icon {
+    background: #ffffff;
+    color: #A3A3A3;
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+  }
+  
 .nav_logo {
     width: 150px;
 }
@@ -153,14 +93,14 @@ footer {
 }
 
 .nav_button {
-    width: 160px;
+    width: 100%;
     height: 60px;
     background-color: #ED3237;
     color: #ffffff;
     border: none;
     font: inherit;
     font-weight: 600;
-    font-size: 0.9rem;
+    font-size: 1.1rem;
 }
 
 .nav_button:active {
@@ -174,6 +114,10 @@ footer {
 
 }
 
+.centered_food_items > h1 {
+    padding-bottom: 2rem;
+}
+
 .food_items_grid {
     display: grid;
     align-items: end;
@@ -184,9 +128,13 @@ footer {
     padding: 15px;
 }
 
-.food_item>hr {
+.food_item > hr {
     border-top: 1px solid #A3A3A3;
     width: 300px;
+}
+
+.food_item > ul > li {
+    margin-left: 3rem;
 }
 
 @media (min-width: 600px) {
@@ -197,14 +145,23 @@ footer {
 }
 
 @media (min-width: 900px) {
+    .mobile_hamburger_icon {
+        display: none;
+    }
 
     .menu_items {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: center;
         gap: 1rem;
         padding-top: 0.5rem;
         list-style-type: none;
+    }
+
+    .nav_button {
+        width: 160px;
+        font-size: 0.9rem;
     }
 
     .food_items_grid {
