Footer spacing, fix typos

--- a/src/style_restaurant.css
+++ b/src/style_restaurant.css
@@ -61,6 +61,10 @@ footer {
     color: #ffffff;
 }
 
+#content {
+    padding-bottom: 100px;
+}
+
 #nav_bar {
     display: flex;
     flex-direction: column;
